# spotinoti

./: .env.example  .gitignore  Makefile  README.md  com.altvec.spotinoti.plist  pyproject.toml
spotinoti/: spotify.py
spotinoti/scripts/: spotinoti.py
spotinoty/: __init__.py  spotify.py
spotinoty/scripts/: spotinoty.py
